@@ -1,5 +1,6 @@
 Version 2.03.02 - 
 ===================================
+  Add missing Before=shutdown.target to LVM2 services to fix shutdown ordering.
   Skip autoactivation for a PV when PV size does not match device size.
   Remove first-pvscan-initialization which should no longer be needed.
   Add remote refresh through lvmlockd/dlm for shared LVs after lvextend.
